[package]
name = "rdaio"
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["Konstantin P aka kpstsp"]
description = "Retro DOS-style MP3 player with TUI"

[dependencies]

# TUI dependencies
ratatui = "0.26"
crossterm = "0.27"

# Audio playback with Symphonia
symphonia = { version = "0.5.5", features = ["mp3"] }
rodio = "0.17"

# MP3 metadata
id3 = "1"

# Utilities
rand = "0.8"
[dev-dependencies]
tempfile = "3"